# alps-android

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  THIRDPARTY.md  alps.properties  build.gradle.kts  settings.gradle.kts
AlpsCore/: README.md  RELEASENOTES.md  build.gradle.kts
AlpsCore/releases/1.0.0/: AlpsCore-1.0.0-debug.aar  AlpsCore-1.0.0-release.aar
AlpsCore/releases/1.0.2/: AlpsCore-1.0.2-debug.aar  AlpsCore-1.0.2-release.aar
AlpsCore/releases/1.1.0/: AlpsCore-1.1.0-debug.aar  AlpsCore-1.1.0-release.aar
AlpsCore/releases/1.1.1/: AlpsCore-1.1.1-debug.aar  AlpsCore-1.1.1-release.aar
AlpsCore/src/main/cpp/: CMakeLists.txt  alpsnative.cpp  dlb_alps_native.h  log.h  types.h
AlpsCore/thirdPartyLicenses/: NativeLibrary_THIRDPARTY.md  thirdPartyLicenses.html
AlpsCore/thirdPartyLicenses/reference/: licenseDebugUnitTestReport.json
AlpsSamples/: README.md  RELEASENOTES.md  build.gradle.kts
AlpsSamples/releases/1.0.0/: AlpsSamples-1.0.0-debug.aar  AlpsSamples-1.0.0-release.aar
AlpsSamples/releases/1.0.2/: AlpsSamples-1.0.2-debug.aar  AlpsSamples-1.0.2-release.aar
AlpsSamples/releases/1.1.0/: AlpsSamples-1.1.0-debug.aar  AlpsSamples-1.1.0-release.aar
AlpsSamples/releases/1.1.1/: AlpsSamples-1.1.1-debug.aar  (+1 more)
AlpsSamples/thirdPartyLicenses/: thirdPartyLicenses.html
CLI/: README.md  RELEASENOTES.md  build.gradle.kts
CLI/thirdPartyLicenses/: thirdPartyLicenses.html
app/: README.md  RELEASENOTES.md  build.gradle.kts
app/thirdPartyLicenses/: thirdPartyLicenses.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+142 files in other folders)
